@@ -11,7 +11,7 @@ Improved Punky Willy sound emulation
 Fixed sound for Taito Sure Shot and Mr. Black (NMI line needs to be pulsed for these games, Sure Shot sounds awful like the real thing)
 Made speech work for Taito Vegas and Lady Luck - working around a strange PIA issue
 
-*** ROM SUPPORT *** Thanks to ipdb.org, Effect, Juan, Jubex77, JMan, Gore Daimon, Soren
+*** ROM SUPPORT *** Thanks to ipdb.org, Effect, Juan, Jubex77, JMan, Gore Daimon, Soren, barakandl
 New:
 MAC: MAC Jungle
 
@@ -22,6 +22,7 @@ LTD: Space Poker (corrected one more byte in the patched ROM)
 Taito: Sure Shot (fixed bad DAC data offset in ssh_s3.bin)
 
 Clones:
+301/Bullseye (normal pinball scoring)
 A.G. Football (R07u & R18u) (exact clone of A.G. Soccer-Ball)
 A.G. Soccer-Ball (R07u)
 Demolition Man LX-4C (competition MOD)
